Fix: `z-index: -1` needed for publish footer due to accordions

--- a/packages/editor/src/components/post-publish-panel/style.scss
+++ b/packages/editor/src/components/post-publish-panel/style.scss
@@ -37,6 +37,7 @@
 	padding: 16px;
 	position: absolute;
 	bottom: 0;
+	z-index: -1;
 }
 
 .components-button.editor-post-publish-panel__toggle.is-primary {
